	* Added Sourceforge.fight, which returns the list of specified
	projects and their bug/rfe count in sorted order, least to most.

	* Added Utilities.reply for replying to a person with text.  Like
	echo, but it prepends the nick like the bot normally does.
	
	* Changed Utilities.success to accept an option <text> argument
	for text to be appended to the success message.
	
	* Changed User.{addhostmask,removehostmask,register,unregister}
	to allow owner users to do what they will with their users.  You
	can now add hostmasks, remove hostmasks, register users, and
	unregister users willy-nilly.
	
	* Changed and moved several configuration variables.
	supybot.{throttleTime,maxHistoryLength,pingServer,pingInterval}
	all moved to supybot.protocols.irc; supybot.httpPeekSize moved to
	supybot.protocols.http; supybot.threadAllCommands moved to
	supybot.debug.threadAllCommands, and probably a few others I
	forgot to mention.
	
	* Added Http.zipinfo, which returns a veritable plethora of
	information about the supplied zip code.

	* Added a configuration variable for every plugin, "public", that
	determines whether the plugin is considered public (i.e., whether
	it will show up in the list command when the list command isn't
	given the --private option).

	* Added Misc.author, a command for finding out which author
	claims a particular plugin.

	* Added Topic.lock and Topic.unlock, for locking and unlocking
	the topic.

	* Added Topic.restore, for restoring the topic to the last-sent
	topic.  Useful for when people change your carefully crafted
	topic through means other than the bot.

	* Changed supybot.brackets so you can now provide the empty
	string, which means you cannot do nesting with brackets.

	* Added Anonymous, a plugin for anonymously saying things to a
	channel.

	* Added Utilities.last, which replies with the last string
	given.  This is useful for sequencing commands and then replying
	with the output of the last commnad.
